[profile.dev]
opt-level = "z"

[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
hdi = "0.6"
hdk = { version = "0.5", features = [ "unstable-functions" ] }
serde = "1"

[patch.crates-io]

kitsune2 = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_api = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_core = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_gossip = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
