[profile.dev]
opt-level = "z"

[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
hdi = "0.6"
hdk = { version = "0.5", features = [ "unstable-functions" ] }
serde = "1"

[patch.crates-io]

kitsune2 = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_api = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_core = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_gossip = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }

# holochain_p2p = { path ="/home/guillem/projects/holochain/core/holochain/crates/holochain_p2p"}
# holochain_state= { path ="/home/guillem/projects/holochain/core/holochain/crates/holochain_state"}
# holochain_zome_types= { path ="/home/guillem/projects/holochain/core/holochain/crates/holochain_zome_types"}
# holochain_integrity_types= { path ="/home/guillem/projects/holochain/core/holochain/crates/holochain_integrity_types"}
# holochain_sqlite= { path ="/home/guillem/projects/holochain/core/holochain/crates/holochain_sqlite"}
# holochain_nonce= { path ="/home/guillem/projects/holochain/core/holochain/crates/holochain_nonce"}
# holochain_types= { path ="/home/guillem/projects/holochain/core/holochain/crates/holochain_types"}
# holochain_keystore= { path ="/home/guillem/projects/holochain/core/holochain/crates/holochain_keystore"}
# holochain_state_types= { path ="/home/guillem/projects/holochain/core/holochain/crates/holochain_state_types"}
# holochain_chc= { path ="/home/guillem/projects/holochain/core/holochain/crates/holochain_chc"}
# mr_bundle= { path ="/home/guillem/projects/holochain/core/holochain/crates/mr_bundle"}
# holo_hash= { path ="/home/guillem/projects/holochain/core/holochain/crates/holo_hash"}
