[package]
name = "always-online-node"
version = "0.1.0"
edition = "2021"

[dependencies]
holochain_runtime = { git = "https://github.com/darksoil-studio/p2p-shipyard", branch = "main-0.4" }
anyhow = "1"
clap = {version = "4.5.4", features = [ "derive" ] }
tokio = { version = "1", features = [ "full" ] } 
holochain_types = "0.4.0-rc"
mr_bundle = "0.4.0-rc"
sha256 = "1"
url2 = "0.0.6"
tx5-signal = "0.1.5-beta"
log2 = "0.1"
log = "0.4"
