[package]
name = "always-online-node"
version = "0.1.0"
edition = "2021"

[dependencies]
holochain_runtime = { git = "https://github.com/darksoil-studio/tauri-plugin-holochain", branch = "main-0.5" }
holochain_client = "0.7.0"
holochain_conductor_api = "0.5"
holochain_types = "0.5"
mr_bundle = "0.5"

tx5-signal = "0.3"

anyhow = "1"
clap = {version = "4.5.4", features = [ "derive" ] }
tokio = { version = "1", features = [ "full" ] } 
sha256 = "1"
url2 = "0.0.6"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
